--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "dist/babel-runtime-jsx-style-transform.umd.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "mocha ./test/index.js",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Yurisa/babel-runtime-jsx-style-transform"
   },
   "keywords": [
     "babel",
@@ -22,11 +24,15 @@
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "rollup": "^1.13.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-filesize": "^6.1.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.2"
+  },
+  "dependencies": {
+    "mocha": "^8.2.1"
   }
 }
