--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "babel-runtime-jsx-style-transform",
-  "version": "1.0.2",
+  "name": "@alifd/babel-runtime-jsx-style-transform",
+  "version": "1.0.0",
   "description": "Babel runtime support for jsx.",
   "main": "dist/babel-runtime-jsx-style-transform.umd.js",
   "scripts": {
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yurisa/babel-runtime-jsx-style-transform"
+    "url": "https://github.com/alibaba-fusion/babel-runtime-jsx-style-transform"
   },
   "keywords": [
     "babel",
     "runtime",
     "jsx"
   ],
-  "author": "Yurisa",
+  "author": "alibaba-fusion",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -26,13 +26,11 @@
     "@babel/preset-env": "^7.4.5",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
+    "mocha": "^8.2.1",
     "rollup": "^1.13.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-filesize": "^6.1.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.2"
-  },
-  "dependencies": {
-    "mocha": "^8.2.1"
   }
 }
